--- a/MyProject/config.html
+++ b/MyProject/config.html
@@ -256,9 +256,7 @@ h6 {
 </style>
 
 
-</head>
 
-<body>
 
 <style type="text/css">
 .main-container {
@@ -289,8 +287,6 @@ summary {
 </style>
 
 
-
-<div class="container-fluid main-container">
 
 <!-- tabsets -->
 
@@ -365,14 +361,23 @@ $(document).ready(function () {
 
 
 
+</head>
+
+<body>
+
+
+<div class="container-fluid main-container">
+
+
+
 
 <div class="fluid-row" id="header">
 
 
 
 <h1 class="title toc-ignore">Generic R Project Configuration File</h1>
-<h4 class="author"><em>Alex F. Bokov, Ph.D.</em></h4>
-<h4 class="date"><em>10/18/2018</em></h4>
+<h4 class="author">Alex F. Bokov, Ph.D.</h4>
+<h4 class="date">10/18/2018</h4>
 
 </div>
 
